--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,38 +1,46 @@
 {% extends 'blog/base.html' %}
 
-{% block content %}
-<div class="post">
+{% block header %}
+<div class="post-heading">
+  <h1>{{ post.title }}</h1>
   {% if post.published_date %}
-    <div class="date">
-      {{ post.published_date }}
-    </div>
-  {% else %}
-      <a class="btn btn-default" href="{% url 'post_publish' pk=post.pk %}">Publish</a>
+    <span class="meta">{{ post.published_date }}</span>
   {% endif %}
-  {% if user.is_authenticated %}
-    <a class="btn btn-default" href="{% url 'post_edit' pk=post.pk %}">Edit</a>
-    <a class="btn btn-default" href="{% url 'post_remove' pk=post.pk %}">Delete</a>
-  {% endif %}
-  <h2>{{ post.title }}</h2>
-  <p>{{ post.text|linebreaksbr }}</p>
 </div>
+{% endblock %}
+
+{% block content %}
+{% if not post.published_date %}
+  <a class="btn btn-warning" href="{% url 'post_publish' pk=post.pk %}" role="button">Publish</a>
+{% endif %}
+
+{% if user.is_authenticated %}
+  <a class="btn btn-success" href="{% url 'post_edit' pk=post.pk %}" role="button">Edit</a>
+  <a class="btn btn-danger" href="{% url 'post_remove' pk=post.pk %}" role="button">Delete</a>
+{% endif %}
+
+<p>
+  {{ post.text|linebreaksbr }}
+</p>
 
 <hr>
-<a class="btn btn-default" href="{% url 'add_comment_to_post' pk=post.pk %}">Add comment</a>
+<p>
+  <a class="btn btn-success" href="{% url 'add_comment_to_post' pk=post.pk %}" role="button">Add comment</a>
+</p>
 {% for comment in post.comments.all %}
-  <div class="comment">
-    <div class="date">
-      {{ comment.created_date }}
-      {% if not comment.approved_comment %}
-        <a class="btn btn-default" href="{% url 'comment_remove' pk=comment.pk %}">Remove</a>
-        <a class="btn btn-default" href="{% url 'comment_approve' pk=comment.pk %}">Approve</a>
-      {% endif %}
-    </div>
-    <strong>{{ comment.author }}</strong>
-    <p>{{ comment.text|linebreaks }}</p>
-  </div>
-{% empty %}
-  <p>No comments here yet :(</p>
+  {% if not comment.approved_comment %}
+  <p>
+    <a class="btn btn-danger" href="{% url 'comment_remove' pk=comment.pk %}" role="button">Remove</a>
+    <a class="btn btn-primary" href="{% url 'comment_approve' pk=comment.pk %}" role="button">Approve</a>
+  </p>
+  {% endif %}
+
+  <p class="comment-meta">{{ comment.created_date }}</p>
+  <strong>{{ comment.author }}</strong>
+  <p>{{ comment.text|linebreaks }}</p>
+
+  {% empty %}
+  <p>まだコメントはありません。</p>
 {% endfor %}
 
 {% endblock %}
