--- a/blog/templates/blog/post_draft_list.html
+++ b/blog/templates/blog/post_draft_list.html
@@ -1,11 +1,22 @@
 {% extends 'blog/base.html' %}
 
+{% block header %}
+<div class="site-heading">
+  <h1>Draft</h1>
+</div>
+{% endblock %}
+
 {% block content %}
   {% for post in posts %}
-    <div class="post">
-      <p class="date">created: {{ post.created_date|date:'d-m-Y' }}</p>
-      <h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
-      <p>{{ post.text|truncatechars:200 }}</p>
-    </div>
+  <div class="post-preview">
+    <a href="{% url 'post_detail' pk=post.pk %}">
+      <h2 class="post-title">
+        {{ post.title }}
+      </h2>
+    </a>
+    <p class="post-meta">{{ post.created_date }}</p>
+    <p>{{ post.text|truncatechars:200 }}</p>
+  </div>
+  <hr>
   {% endfor %}
 {% endblock %}
