--- a/blog/templates/blog/post_edit.html
+++ b/blog/templates/blog/post_edit.html
@@ -1,10 +1,17 @@
 {% extends 'blog/base.html' %}
 
+{% block header %}
+<div class="site-heading">
+  <h1>New post</h1>
+</div>
+{% endblock %}
+
 {% block content %}
-  <h2>New post</h2>
   <form method="POST" class="post-form">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit" class="save btn btn-default">Save</button>
+    <div class="text-right">
+      <button type="submit" class="save btn btn-success" role="button">Save</button>
+    </div>
   </form>
 {% endblock %}
