--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -25,7 +25,7 @@
 
 <hr>
 <p>
-  <a class="btn btn-success" href="{% url 'add_comment_to_post' pk=post.pk %}" role="button">Add comment</a>
+  <a class="btn btn-success" href="{% url 'post_comment' pk=post.pk %}" role="button">Add comment</a>
 </p>
 {% for comment in post.comments.all %}
   {% if not comment.approved_comment %}
